# LSP

./: .env  .env.sample  .gitignore  LICENSE  README.md  __main__.py  main.py  pyproject.toml  replit.nix  requirements.txt
assets/: banner.txt
bmo/: client.py  errors.py
bmo/components/: events.py  help.py  listeners.py  meta.py  music.py  settings.py
bmo/core/: __init__.py  chron.py  color_logs.py  tb_errors.py
bmo/plugins/: help.py  meta.py  music.py  utilities.py
bmo/plugins/meta/: ping.py
lps/: client.py
lps/core/: chron.py
lsp/: banner.txt  bot.py  client.py  errors.py
lsp/components/: events.py  meta.py  starboard.py
lsp/core/: chron.py  color_logs.py
lsp/plugins/: meta.py  starboard.py
