[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
black = "^22.6.0"
isort = "^5.10.1"
hikari = {version = "^2.0.0.dev109", python = "~3.8"}
hikari-tanjun = {version = "^2.5.3a1", python = "~3.8"}
uvloop = "^0.16.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"