[tool.poetry]
name = "lsp"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
psutil = "^5.9.3"
python-dotenv = "^0.21.0"
uvloop = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
